--- a/YandexGeocoder/YandexGeocoder.csproj
+++ b/YandexGeocoder/YandexGeocoder.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{B2C250CC-3CF1-464D-B16D-4392761C69FF}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>YandexGeocoder</RootNamespace>
+    <RootNamespace>Yandex.Geocoder</RootNamespace>
     <AssemblyName>YandexGeocoder</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
